Bug 452492 - external screen brightness is not restored after screen wakeup
Summary: external screen brightness is not restored after screen wakeup
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 6.0.4
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Jakob Petsovits
URL:
Keywords: regression
: 421492 423457 476540 486500 494588 495289 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-04-11 08:53 UTC by Jos van den Oever
Modified: 2024-12-21 00:08 UTC (History)
19 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jos van den Oever 2022-04-11 08:53:16 UTC
SUMMARY
***
When the external monitor is set to turn off after a certain time of no activity, the brightness is not fully restored after wakeup. The brightness can be fixed with the the keyboard brightness buttons or with `ddcutil setvsp 10 + 65535`.
***


STEPS TO REPRODUCE
1.  run wayland session with dbus-run-session startplasma-wayland
2. set 'Screen energy savings' to 'Switch off after 3 min', press 'Apply'
3. wait 3 minutes until screen turns off
4. awaken screen by doing user input on keyboard

OBSERVED RESULT

The external monitor is on lowest brightness setting.

EXPECTED RESULT

The external monitor is on the same brightness as before it went to sleep.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.24.3
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3
Linux Kernel: 5.15.30
Graphics platform: Wayland

ADDITIONAL INFORMATION
The graphics is embedded Intel graphics UHD Graphics 620. The monitor is LG connected via USB-C for display and power to the laptop. The laptop screen and the external monitor are active. Only the laptop monitor is restored to the initial brightness.

Related bug: https://bugs.kde.org/show_bug.cgi?id=423457
Comment 1 Jos van den Oever 2022-04-11 08:55:28 UTC
The monitor is visible like this:
```
$ ddcutil detect
Display 1
   I2C bus:  /dev/i2c-9
   EDID synopsis:
      Mfg id:               GSM
      Model:                LG HDR 4K
      Product code:         30471
      Serial number:        
      Binary serial number: [..]
      Manufacture year:     [..]
   VCP version:         2.1
```
Comment 2 Lucia Mrenica 2023-07-26 05:36:13 UTC
Same issue here, since powerdevil started depending on ddcutil (Arch Linux), every time my screen turns on after it was off for a while its brightness resets to zero but the value in the battery applet remains the same.
Comment 3 Lucia Mrenica 2023-07-26 05:37:55 UTC
(In reply to Matej Mrenica from comment #2)
> Same issue here, since powerdevil started depending on ddcutil (Arch Linux),
> every time my screen turns on after it was off for a while its brightness
> resets to zero but the value in the battery applet remains the same.

In my case however, I only use one screen (desktop).
Comment 4 gudvinr+kde 2023-08-19 11:39:03 UTC
I have same issue with AMD GPU and 2 external displays (DP and HDMI). Those displays also happen to be only displays I have since it's desktop.

However, for some reason brightness only gets reset to 0 only sometimes and it's not fully reproducible.

Operating System: Arch Linux 
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10
Kernel Version: 6.1.46-1-lts (64-bit)
Graphics Platform: X11
Graphics Processor: AMD Radeon RX Vega M GL Graphics
Comment 5 postix 2024-05-18 11:08:10 UTC
*** Bug 486500 has been marked as a duplicate of this bug. ***
Comment 6 postix 2024-05-18 11:38:34 UTC
*** Bug 421492 has been marked as a duplicate of this bug. ***
Comment 7 postix 2024-05-18 11:39:53 UTC
*** Bug 423457 has been marked as a duplicate of this bug. ***
Comment 8 Jakob Petsovits 2024-09-02 09:17:03 UTC
I collected various thoughts in this developer-focused issue titled "Dimming Rework": https://invent.kde.org/plasma/powerdevil/-/issues/38

I'm still not sure if specifically dimming-related bugs such as Bug 484129 or Bug 486500 (which was closed as duplicate of this one) are indeed the same thing as what you're seeing here, but I'm confident that the eventual fix will address all of these kinds of bugs at once.
Comment 9 Phil Hord 2024-10-21 19:37:57 UTC
(In reply to Jakob Petsovits from comment #8)
> I collected various thoughts in this developer-focused issue titled "Dimming
> Rework": https://invent.kde.org/plasma/powerdevil/-/issues/38

Thanks for the attention to this, Jakob.  I am experiencing these problems on my laptop with internal and external displays since KWin 6.2 arrived.  On mine, it seems to be racy in that sometimes the persisted (30%) values are applied to the screens but the KWin applet still shows 100% for one of the displays.  I captured the persisted difference by saving the config during the failure and then after resolving it.

        $ cp ~/.config/kwinoutputconfig.json /tmp/before-kwinoutputconfig.json
        # ... resolved using issue with KWin dialog ...
        $ cp ~/.config/kwinoutputconfig.json /tmp/after-kwinoutputconfig.json
        $ diff /tmp/before-kwinoutputconfig.json /tmp/after-kwinoutputconfig.json 
        6c6
        <                 "brightness": 0.3,
        ---
        >                 "brightness": 1,
        29c29
        <                 "brightness": 0.3,
        ---
        >                 "brightness": 1,

It would be helpful to know what other information could be useful for analyzing these problems.  I tried probing with ddcutil, but it's not installed.

    $ ddcutil detect
    zsh: command not found: ddcutil

What else can we check, and should we report it here or somewhere else?

Operating System: KDE neon 6.2
KDE Plasma Version: 6.2.0
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Kernel Version: 6.8.0-47-generic (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-10610U CPU @ 1.80GHz
Memory: 15.3 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics
Manufacturer: LENOVO
Product Name: 20UCS4TR00
System Version: ThinkPad X1 Yoga Gen 5
Comment 10 Jakob Petsovits 2024-11-20 05:33:04 UTC
A relevant merge request has been opened @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/466

This would take care of restoring non-dimmed brightness of reconnected displays after wake-up. With an additional Wayland dimming protocol for KWin, we should be able to also restore non-dimmed brightness after a reboot (not part of this particular merge request).
Comment 11 Nate Graham 2024-11-20 15:28:16 UTC
*** Bug 495289 has been marked as a duplicate of this bug. ***
Comment 12 Nate Graham 2024-11-20 15:37:59 UTC
*** Bug 494588 has been marked as a duplicate of this bug. ***
Comment 13 Jakob Petsovits 2024-12-15 21:53:38 UTC
Git commit b6b563f732056b59d9ae83e5327039db22cad806 by Jakob Petsovits.
Committed on 15/12/2024 at 19:28.
Pushed by jpetso into branch 'master'.

daemon: Introduce proper dimming API for ScreenBrightnessController

This allows us to correctly restore brightness for displays that
were disconnected when they were dimmed, and are reconnected later.
It doesn't quite fix restoring dimmed displays across reboots yet,
this will be an extension requiring Wayland protocol updates.

`ScreenBrightnessController` now keeps track of more data for each
connected display, enough to recognize the display after it appears
again later (possibly with a different display ID) and restore some
runtime state.

This allows us to store and restore values for a display's
nominal brightness, minimum brightness, and dimming ratio.

The dimming ratio is multiplied with the nominal brightness and
capped by the minimum brightness to produce a display's desired
actual brightness. Several callers can set a dimming ratio,
the lowest one will be used. For now, the DimDisplay action is
the only user; however, other dimming methods are anticipated
in the future.

Importantly, by being able to restore these values separately
from just a single hardware brightness value, we can tell if the
display is still in the expected state from before the disconnect.
If it is, we can continue using the earlier nominal brightness but
update the dimming ratio to the current runtime setting.
Unrecognized or changed displays can remain untouched, they can be
assumed with a 1.0 dimming ratio from their current brightness level.

Note that this API is meant only for temporary dimming from the
baseline of the current nominal brightness. It isn't meant for
profile-dependent brightness changes or for ambient light sensors
driving gradual, automatic brightness adjustments. We can have
dedicated APIs later for these use cases.
Related: bug 496513

M  +20   -77   daemon/actions/bundled/dimdisplay.cpp
M  +1    -2    daemon/actions/bundled/dimdisplay.h
A  +38   -0    daemon/controllers/displaymatch.h     [License: LGPL(v2.0+)]
M  +90   -7    daemon/controllers/screenbrightnesscontroller.cpp
M  +40   -0    daemon/controllers/screenbrightnesscontroller.h

https://invent.kde.org/plasma/powerdevil/-/commit/b6b563f732056b59d9ae83e5327039db22cad806
Comment 14 Jakob Petsovits 2024-12-21 00:08:34 UTC
*** Bug 476540 has been marked as a duplicate of this bug. ***